<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MCServerActivity!</string>
    <string name="app_name">MCServer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="mcserver_is_running">MCServer is running</string>
    <string name="mcserver_is_not_running">MCServer is not running</string>
    <string name="your_ip">Your IP …</string>
    <string name="configure">Configure</string>

</resources>